# chip-8-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
chip8/: Cargo.toml  startup.ch8
chip8/src/: main.rs
core/: Cargo.toml
core/src/: display.rs  emulator.rs  error.rs  instruction.rs  lib.rs  stack.rs
frontend/: Cargo.toml
frontend/src/: audio.rs  lib.rs  main.rs
