[package]
name = "chip8"
version = "1.0.0"
authors = ["ElCholoGamer"]
edition = "2021"

[dependencies]
core = { path = "../core" }
nfd = "0.0.4"
rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
spin_sleep = "1.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
